--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -5,7 +5,7 @@
 #
 # Copyright (C) 2020 KFERMercer
 #
-name: OpenWrt-CI
+name: OpenWrt-CI X86测试(原版LEDE)
 
 on:
   schedule:
@@ -13,6 +13,9 @@ on:
   release:
     types: [published]
 
+  push:
+    branches: 
+      - master
 jobs:
 
   build_openwrt:
